--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -1,16 +1,25 @@
-<nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
-        <div id="logo-arg-programa" class="logo-arg-programa">
-            <a href="http://localhost:4200/"><img src="../../../assets/ap-logo.png" alt="ap-logo" class="logo-arg"></a>
-        </div>
-        <div id="redes" class="social">
-            <ul class="color-black">
-                <a href="#" style="color: white;"><i class="fa-brands fa-linkedin fa-3x"></i></a>
-                <a href="#" style="color: white;"><i class="fa-brands fa-twitter-square fa-3x"></i></a>
-                <a href="#" style="color: white"><i class="fa-brands fa-github-square fa-3x"></i></a>
-            </ul>
-        </div>
-        <button routerLink="/Login"type="button" class="btn btn-secondary">Login</button>
+<nav id="retorno"class="navbar navbar-dark bg-primary">
+  <div class="container-fluid">
+    <div id="logo-arg-programa" class="logo-arg-programa">
+      <a href=""
+        ><img src="../../../assets/ap-logo.png" alt="ap-logo" class="logo-arg"
+      /></a>
     </div>
+    <div id="redes" class="social">
+      <ul class="color-black">
+        <a href="#" style="color: white"
+          ><i class="fa-brands fa-linkedin fa-3x"></i
+        ></a>
+        <a href="#" style="color: white"
+          ><i class="fa-brands fa-twitter-square fa-3x"></i
+        ></a>
+        <a href="#" style="color: white"
+          ><i class="fa-brands fa-github-square fa-3x"></i
+        ></a>
+      </ul>
+    </div>
+    <button routerLink="/Login" type="button" class="btn btn-secondary">
+      LOGIN
+    </button>
+  </div>
 </nav>
-
