--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,25 +1,39 @@
 <section id="proyectos" class="section gray-bg">
-    <h2 class="h3 text-center titulo">Proyectos</h2>
-    <div class="agregar-eliminar">
-      <a href=""><i class="fa-solid fa-trash"></i></a>
-      <a href=""><i class="fa-solid fa-plus"></i></a>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <div class="col-sm-4 d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
-                <img src="../../../assets/portfolio.png" class="card-img-top" alt="portfilio">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+  <h2 class="h3 text-center titulo">Proyectos</h2>
+  <div class="agregar-eliminar">
+    <a href=""><i class="fa-solid fa-trash"></i></a>
+    <a href=""><i class="fa-solid fa-plus"></i></a>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card" style="width: 18rem">
+        <img
+          src="../../../assets/portfolio.png"
+          class="card-img-top"
+          alt="portfilio"
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
         </div>
-        <div class="col-sm-4 d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
-                <img src="../../../assets/portfolio.png" class="card-img-top" alt="portfilio">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-        </div>
+      </div>
     </div>
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card" style="width: 18rem">
+        <img
+          src="../../../assets/portfolio.png"
+          class="card-img-top"
+          alt="portfilio"
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
