--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,44 +1,92 @@
 <section id="skills" class="section">
-    <div class="container-xl">
-          <div class="col-lg-12 text-center">
-            <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
-          </div>
-          <div class="agregar-eliminar">
-            <a href=""><i class="fa-solid fa-trash"></i></a>
-            <a href=""><i class="fa-solid fa-plus"></i></a>
-        </div>
-        <div class="row mb-12">
-          <div class="col-12 align-items-center">
-            <p class="h5">HTML</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">BOOSTRAP</p>
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">JAVASCRIPT</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">JAVA</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">HTML</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">SQL</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p class="h5">TERMINAL</p> 
-            <div class="progress mb-5 rounded-5" style="height:7px">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        
-          </div>
-        </div>
+  <div class="container-xl">
+    <div class="col-lg-12 text-center">
+      <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
     </div>
+    <div class="agregar-eliminar">
+      <a href=""><i class="fa-solid fa-trash"></i></a>
+      <a href=""><i class="fa-solid fa-plus"></i></a>
+    </div>
+    <div class="row mb-12">
+      <div class="col-12 align-items-center">
+        <p class="h5">HTML</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">BOOSTRAP</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">JAVASCRIPT</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">JAVA</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">HTML</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">SQL</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+        <p class="h5">TERMINAL</p>
+        <div class="progress mb-5 rounded-5" style="height: 7px">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            style="width: 100%"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
