agregan los dashboards

--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -2,8 +2,8 @@
   <div class="col-12 text-center">
     <h2 class="h3 titulo text-center">Education</h2>
     <div class="agregar-eliminar">
-      <a href=""><i class="fa-solid fa-trash"></i></a>
-      <a href=""><i class="fa-solid fa-plus"></i></a>
+      <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
+          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
     </div>
     <p class="h6 mb-0">Primario y secundario</p>
     <p class="text-muted">Santa Maria Goretti, 2007 - 2020</p>
