--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,7 +1,7 @@
 .inicio { 
     width: 100%;
     min-height: 100vh;
-    background-image: url(../../../assets/Fondo-Header.jpg);
+    background-image: url(../../../assets/imagenes/Fondo-Header.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
