--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div id="logo-arg-programa" class="logo-arg-programa">
       <a href=""
-        ><img src="../../../assets/ap-logo.png" alt="ap-logo" class="logo-arg"
+        ><img src="../../../assets/imagenes/ap-logo.png" alt="ap-logo" class="logo-arg"
       /></a>
     </div>
     <div id="redes" class="social">
