--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,14 +1,14 @@
 <section id="proyectos" class="section gray-bg">
   <h2 class="h3 text-center titulo">Proyectos</h2>
   <div class="agregar-eliminar">
-    <a href=""><i class="fa-solid fa-trash"></i></a>
-    <a href=""><i class="fa-solid fa-plus"></i></a>
+    <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
+          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
   </div>
   <div class="row d-flex justify-content-center">
     <div class="col-sm-4 d-flex justify-content-center">
       <div class="card" style="width: 18rem">
         <img
-          src="../../../assets/portfolio.png"
+          src="../../../assets/imagenes/portfolio.png"
           class="card-img-top"
           alt="portfilio"
         />
@@ -23,7 +23,7 @@
     <div class="col-sm-4 d-flex justify-content-center">
       <div class="card" style="width: 18rem">
         <img
-          src="../../../assets/portfolio.png"
+          src="../../../assets/imagenes/portfolio.png"
           class="card-img-top"
           alt="portfilio"
         />
