--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -6,8 +6,12 @@
           <h3 class="dark-color text-center">Acerca de mi</h3>
         </div>
         <div class="agregar-eliminar">
-          <a href=""><i class="fa-solid fa-trash"></i></a>
-          <a href=""><i class="fa-solid fa-plus"></i></a>
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-plus"></i>
+          </button>
         </div>
       </div>
     </div>
@@ -17,7 +21,7 @@
         <div class="box-shadow">
           <img
             class="img-fluid rounded"
-            src="../../../assets/foto-perfil.jpg"
+            src="../../../assets/imagenes/foto-perfil.jpg"
             alt="lucho"
           />
         </div>
