--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <h2 class="text-center titulo">Experiencias</h2>
     <div class="agregar-eliminar">
-      <a href=""><i class="fa-solid fa-trash"></i></a>
-      <a href=""><i class="fa-solid fa-plus"></i></a>
+      <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
+          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
     </div>
     <div class="col-6 text-center">
       <p class="h5">2022</p>
