--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -4,8 +4,8 @@
       <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
     </div>
     <div class="agregar-eliminar">
-      <a href=""><i class="fa-solid fa-trash"></i></a>
-      <a href=""><i class="fa-solid fa-plus"></i></a>
+      <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
+          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
     </div>
     <div class="row mb-12">
       <div class="col-12 align-items-center">
