agregan botones de eliminar

--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,39 +1,20 @@
 <section id="proyectos" class="section gray-bg">
   <h2 class="h3 text-center titulo">Proyectos</h2>
-  <div class="agregar-eliminar">
-    <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
-          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
-  </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col-sm-4 d-flex justify-content-center">
-      <div class="card" style="width: 18rem">
-        <img
-          src="../../../assets/imagenes/portfolio.png"
-          class="card-img-top"
-          alt="portfilio"
-        />
-        <div class="card-body">
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
+  <div>
+    <div class="card">
+      <img src="../../../assets/imagenes/portfolio.png" class="card-img-top" alt="portfolio">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
-    <div class="col-sm-4 d-flex justify-content-center">
-      <div class="card" style="width: 18rem">
-        <img
-          src="../../../assets/imagenes/portfolio.png"
-          class="card-img-top"
-          alt="portfilio"
-        />
-        <div class="card-body">
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-pen"></i>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-trash"></i>
+      </button>
     </div>
   </div>
+  
 </section>
