--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -12,6 +12,9 @@
           <button type="button" class="btn btn-primary">
             <i class="fa-solid fa-plus"></i>
           </button>
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-pen"></i>
+          </button>
         </div>
       </div>
     </div>
