--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -2,18 +2,30 @@
   <div class="row">
     <h2 class="text-center titulo">Experiencias</h2>
     <div class="agregar-eliminar">
-      <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
-          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-plus"></i>
+      </button>
     </div>
-    <div class="col-6 text-center">
-      <p class="h5">2022</p>
-      <p class="small text-muted">Desarollo web</p>
-      <p>Constuccion de mi portfolio</p>
-    </div>
-    <div class="col-6 text-center">
-      <p class="h5">2022</p>
-      <p class="small text-muted">Desarollo web</p>
-      <p>Constuccion de mi portfolio</p>
+    <div class="card" aria-hidden="true">
+      <div class="card-body">
+        <h5>EXPERIENCIA 1</h5>
+        <p>
+          TRABAJE EN UNA COSA Y Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Sapiente, nesciunt distinctio recusandae beatae
+          molestias eaque, nihil voluptas veritatis vel optio earum. Iusto sunt
+          architecto praesentium! Harum iste repudiandae dolore nulla.
+        </p>
+        <p>desde</p>
+        <p>hasta</p>
+        <div class="btn-group" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-pen"></i>
+          </button>
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </section>
