--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,35 +1,40 @@
-<section class="login">
-<div class="row">
-  <button routerLink="/" type="button" class="btn btn-link">VOLVER</button>
-  <div class="text-center texto">
-    <h3>INICIO DE SESION</h3>
-  </div>
-
-  <form class="formulario">
-
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label texto">Correo</label>
-      <input
-        type="email"
-        class="form-control"
-        id="exampleInputEmail1"
-        placeholder="name@correo.com"
-        aria-describedby="emailHelp"
-      />
+<form class="login" (ngSubmit)="onEnviar($event)">
+  <div>
+    <h3 class="texto">INICIO DE SESION</h3>
+    <div>
+      <label for="email" class="texto">Email: </label>
+      <br />
+      <input type="email" formControlName="email" />
     </div>
-
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label texto">Contraseña</label>
+    <div *ngIf="Mail?.errors && Mail?.touched">
+      <p *ngIf="Mail?.hasError('required')" class="error">
+        El email es requerido.
+      </p>
+      <p *ngIf="Mail?.hasError('email')" class="error">
+        El formato del email debe ser válido.
+      </p>
+    </div>
+    <br />
+    <div>
+      <label for="exampleInputPassword1" class="texto">Password: </label>
+      <br />
       <input
         type="password"
-        class="form-control"
-        id="exampleInputPassword1"
-        placeholder="contraseña"
+        formControlName="password"
+        [class.border-danger]="MailValid"
       />
     </div>
-
-    <button type="submit" class="btn btn-primary texto">Iniciar Sesion</button>
-
-  </form>
-</div>
-</section>
+    <div *ngIf="Password?.errors && Password?.touched">
+      <p *ngIf="Password?.hasError('required')" class="error">
+        El password es requerido.
+      </p>
+      <p *ngIf="Password?.errors?.['minLength']" class="error">
+        El password debe ser de 8 o más caracteres.
+      </p>
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+    <br>
+    <button routerLink="/" class="btn btn-primary">Volver</button>
+  </div>
+</form>
