--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -4,8 +4,9 @@
       <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
     </div>
     <div class="agregar-eliminar">
-      <button type="button" class="btn btn-primary"><i class="fa-solid fa-trash"></i></button>
-          <button type="button" class="btn btn-primary"><i class="fa-solid fa-plus"></i></button>
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-plus"></i>
+      </button>
     </div>
     <div class="row mb-12">
       <div class="col-12 align-items-center">
@@ -20,73 +21,15 @@
             aria-valuemax="100"
           ></div>
         </div>
-        <p class="h5">BOOSTRAP</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
-        <p class="h5">JAVASCRIPT</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
-        <p class="h5">JAVA</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
-        <p class="h5">HTML</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
-        <p class="h5">SQL</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
-        <p class="h5">TERMINAL</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
-        </div>
       </div>
+    </div>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-pen"></i>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <i class="fa-solid fa-trash"></i>
+      </button>
     </div>
   </div>
 </section>
