--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -28,13 +28,13 @@
       <p *ngIf="Password?.hasError('required')" class="error">
         El password es requerido.
       </p>
-      <p *ngIf="Password?.errors?.['minLength']" class="error">
+      <p *ngIf="Password?.errors?.['minLength']" class="error texto">
         El password debe ser de 8 o más caracteres.
       </p>
     </div>
     <br />
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-    <br>
-    <button routerLink="/" class="btn btn-primary">Volver</button>
+    <br />
+    <a routerLink="/" class="texto" type="submit">Volver</a>
   </div>
 </form>
