--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -1,8 +1,11 @@
-<nav id="retorno"class="navbar navbar-dark bg-primary">
+<nav id="retorno" class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
     <div id="logo-arg-programa" class="logo-arg-programa">
       <a href=""
-        ><img src="../../../assets/imagenes/ap-logo.png" alt="ap-logo" class="logo-arg"
+        ><img
+          src="../../../assets/imagenes/ap-logo.png"
+          alt="ap-logo"
+          class="logo-arg"
       /></a>
     </div>
     <div id="redes" class="social">
