--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,14 +1,33 @@
 <section id="proyectos" class="section gray-bg">
   <h2 class="h3 text-center titulo">Proyectos</h2>
+  <div class="agregar-eliminar">
+    <button type="button" class="btn btn-primary" routerLink="/Add-proyecto">
+      <i class="fa-solid fa-plus"></i>
+    </button>
+  </div>
   <div>
     <div class="card">
-      <img src="../../../assets/imagenes/portfolio.png" class="card-img-top" alt="portfolio">
+      <img
+        src="../../../assets/imagenes/portfolio.png"
+        class="card-img-top"
+        alt="portfolio"
+      />
       <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5>Proyecto</h5>
+      </div>
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
       </div>
     </div>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary">
+      <button
+        type="button"
+        class="btn btn-primary"
+        routerLink="Editar-proyecto"
+      >
         <i class="fa-solid fa-pen"></i>
       </button>
       <button type="button" class="btn btn-primary">
@@ -16,5 +35,4 @@
       </button>
     </div>
   </div>
-  
 </section>
