--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -4,7 +4,7 @@
       <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
     </div>
     <div class="agregar-eliminar">
-      <button type="button" class="btn btn-primary">
+      <button type="button" class="btn btn-primary" routerLink="Add-habilidad">
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
@@ -24,7 +24,11 @@
       </div>
     </div>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary">
+      <button
+        type="button"
+        class="btn btn-primary"
+        routerLink="/Editar-habilidad"
+      >
         <i class="fa-solid fa-pen"></i>
       </button>
       <button type="button" class="btn btn-primary">
