--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -2,7 +2,11 @@
   <div class="row">
     <h2 class="text-center titulo">Experiencias</h2>
     <div class="agregar-eliminar">
-      <button type="button" class="btn btn-primary">
+      <button
+        type="button"
+        class="btn btn-primary"
+        routerLink="/Add-experiencia"
+      >
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
@@ -18,7 +22,11 @@
         <p>desde</p>
         <p>hasta</p>
         <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-primary">
+          <button
+            type="button"
+            class="btn btn-primary"
+            routerLink="/Editar-experiencia"
+          >
             <i class="fa-solid fa-pen"></i>
           </button>
           <button type="button" class="btn btn-primary">
