--- a/src/app/componentes/pagina404/pagina404.component.html
+++ b/src/app/componentes/pagina404/pagina404.component.html
@@ -1,10 +1,8 @@
 <div class="d-flex align-items-center justify-content-center e404">
-    <div class="text-center">
-        <h1 class="display-1 fw-bold texto">404</h1>
-        <p class="fs-3"> <span class="texto">Opps!</span> PAGINA NO ENCONTRADA</p>
-        <p class="lead">
-            La pagina a la cual quiere acceder no existe.
-          </p>
-        <a routerLink="/" class="btn btn-primary">VOLVER</a>
-    </div>
+  <div class="text-center">
+    <h1 class="display-1 fw-bold texto">404</h1>
+    <p class="fs-3"><span class="texto">Opps!</span> PAGINA NO ENCONTRADA</p>
+    <p class="lead">La pagina a la cual quiere acceder no existe.</p>
+    <a routerLink="/" class="btn btn-primary">VOLVER</a>
+  </div>
 </div>
