--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -2,6 +2,8 @@
     padding-bottom: 40px;
 }
 .card-img-top{
-    width: 100px;
-    height: 100px;
+    width: 400px;
+    height: 300px;
+    padding: 10px;
+    border-radius: 5%;
 }
