--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -36,12 +36,9 @@
       </div>
       <div class="col-xl-6 info-personal">
         <div class="acerca-de-mi">
-          <h4>Soy {{miPortfolio.nombre}}</h4>
+          <h4>Soy {{perfil.nombre}}</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse animi
-            omnis ad, rerum sunt minima eveniet, ea, unde asperiores veritatis
-            blanditiis expedita non odit dolore. Laboriosam minus porro sint
-            quibusdam!
+            {{perfil.informacion}}
           </p>
         </div>
       </div>
