--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,35 +1,35 @@
 <section id="educacion" class="section gray-bg">
   <div class="col-12">
-    <h2 class="h3 titulo text-center">Education</h2>
+    <h2 class="h3 titulo text-center">Educacion</h2>
     <div class="agregar-eliminar">
       <button type="button" class="btn btn-primary" routerLink="/Add-estudio">
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
-    <div class="card" aria-hidden="true">
-      <div class="card-body">
-        <h5>EXPERIENCIA 1</h5>
-        <p>
-          TRABAJE EN UNA COSA Y Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Sapiente, nesciunt distinctio recusandae beatae
-          molestias eaque, nihil voluptas veritatis vel optio earum. Iusto sunt
-          architecto praesentium! Harum iste repudiandae dolore nulla.
-        </p>
-        <p>desde</p>
-        <p>hasta</p>
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button
-            type="button"
-            class="btn btn-primary"
-            routerLink="/Editar-estudio"
-          >
-            <i class="fa-solid fa-pen"></i>
-          </button>
-          <button type="button" class="btn btn-primary">
-            <i class="fa-solid fa-trash"></i>
-          </button>
+
+    <li *ngFor="let educacion of educacionList">
+
+      <div class="card" aria-hidden="true">
+        <div class="card-body">
+          <h5>{{educacion.titulo}}</h5>
+          <p>Inicio: {{educacion.desde}}</p>
+          <p>Fin: {{educacion.hasta}}</p>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button
+              type="button"
+              class="btn btn-primary"
+              routerLink="/Editar-estudio"
+            >
+              <i class="fa-solid fa-pen"></i>
+            </button>
+            <button type="button" class="btn btn-primary">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+
+    </li>
+    
   </div>
 </section>
