--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,38 +1,35 @@
 <section id="proyectos" class="section gray-bg">
-  <h2 class="h3 text-center titulo">Proyectos</h2>
-  <div class="agregar-eliminar">
-    <button type="button" class="btn btn-primary" routerLink="/Add-proyecto">
-      <i class="fa-solid fa-plus"></i>
-    </button>
-  </div>
-  <div>
-    <div class="card">
-      <img
-        src="../../../assets/imagenes/portfolio.png"
-        class="card-img-top"
-        alt="portfolio"
-      />
-      <div class="card-body">
-        <h5>Proyecto</h5>
-      </div>
-      <div class="card-body">
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-      </div>
-    </div>
-    <div class="btn-group" role="group" aria-label="Basic example">
-      <button
-        type="button"
-        class="btn btn-primary"
-        routerLink="Editar-proyecto"
-      >
-        <i class="fa-solid fa-pen"></i>
-      </button>
-      <button type="button" class="btn btn-primary">
-        <i class="fa-solid fa-trash"></i>
+  <div class="row">
+    <h2 class="h3 text-center titulo">Proyectos</h2>
+    <div class="agregar-eliminar">
+      <button type="button" class="btn btn-primary" routerLink="/Add-proyecto">
+        <i class="fa-solid fa-plus"></i>
       </button>
     </div>
+
+    <li *ngFor="let proyectos of proyectosList">
+      <div class="card" aria-hidden="true">
+        <div class="card-body">
+          <h5>{{ proyectos.nombre }}</h5>
+          <p>
+            {{ proyectos.descripcion }}
+          </p>
+          <p>Inicio: {{ proyectos.desde }}</p>
+          <p>Fin: {{ proyectos.hasta }}</p>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button
+              type="button"
+              class="btn btn-primary"
+              routerLink="/Editar-estudio"
+            >
+              <i class="fa-solid fa-pen"></i>
+            </button>
+            <button type="button" class="btn btn-primary">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </li>
   </div>
 </section>
