--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -10,30 +10,33 @@
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
-    <div class="card" aria-hidden="true">
-      <div class="card-body">
-        <h5>EXPERIENCIA 1</h5>
-        <p>
-          TRABAJE EN UNA COSA Y Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Sapiente, nesciunt distinctio recusandae beatae
-          molestias eaque, nihil voluptas veritatis vel optio earum. Iusto sunt
-          architecto praesentium! Harum iste repudiandae dolore nulla.
-        </p>
-        <p>desde</p>
-        <p>hasta</p>
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button
-            type="button"
-            class="btn btn-primary"
-            routerLink="/Editar-experiencia"
-          >
-            <i class="fa-solid fa-pen"></i>
-          </button>
-          <button type="button" class="btn btn-primary">
-            <i class="fa-solid fa-trash"></i>
-          </button>
+
+    <li *ngFor="let experiencia of experienciaList">
+
+      <div class="card" aria-hidden="true">
+        <div class="card-body">
+          <h5>{{experiencia.titulo}}</h5>
+          <p>
+            {{experiencia.informacion}}
+          </p>
+          <p>Inicio: {{experiencia.desde}}</p>
+          <p>Fin: {{experiencia.hasta}}</p>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button
+              type="button"
+              class="btn btn-primary"
+              routerLink="/Editar-experiencia"
+            >
+              <i class="fa-solid fa-pen"></i>
+            </button>
+            <button type="button" class="btn btn-primary">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+
+    </li>
+    
   </div>
 </section>
