--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -8,32 +8,36 @@
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
-    <div class="row mb-12">
-      <div class="col-12 align-items-center">
-        <p class="h5">HTML</p>
-        <div class="progress mb-5 rounded-5" style="height: 7px">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            style="width: 100%"
-            aria-valuenow="85"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          ></div>
+    <li *ngFor="let skills of skillsList">
+
+      <div class="row mb-12">
+        <div class="col-12 align-items-center">
+          <p class="h5">{{skills.titulo}}</p>
+          <div class="progress mb-5 rounded-5" style="height: 7px">
+            <div
+              class="progress-bar"
+              role="progressbar"
+              style="width: 100%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="btn-group" role="group" aria-label="Basic example">
-      <button
-        type="button"
-        class="btn btn-primary"
-        routerLink="/Editar-habilidad"
-      >
-        <i class="fa-solid fa-pen"></i>
-      </button>
-      <button type="button" class="btn btn-primary">
-        <i class="fa-solid fa-trash"></i>
-      </button>
-    </div>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button
+          type="button"
+          class="btn btn-primary"
+          routerLink="/Editar-habilidad"
+        >
+          <i class="fa-solid fa-pen"></i>
+        </button>
+        <button type="button" class="btn btn-primary">
+          <i class="fa-solid fa-trash"></i>
+        </button>
+      </div>
+
+    </li>
   </div>
 </section>
