--- a/src/app/edicion/addacercade/addacercade.component.html
+++ b/src/app/edicion/addacercade/addacercade.component.html
@@ -1,32 +1,34 @@
 <section class="d-flex justify-content-center align-items-center contenido">
-  <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
-    <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Datos</h4>
+  <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+    <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
+      <div class="mb-4 d-flex justify-content-start align-items-center">
+        <h4><i class="bi bi-chat-left-quote"></i>Datos</h4>
+      </div>
+      <div class="mb-1">
+        <form id="contacto">
+          <div class="mb-4">
+            <label for="nombre"><i class="bi bi-envelope-fill"></i> Nombre</label>
+            <input type="text" class="form-control" id="nombre" required />
+            <div class="text-danger"></div>
+          </div>
+          <div class="mb-4">
+            <label for="informacion"
+              ><i class="bi bi-envelope-fill"></i> Indormacion Personal</label
+            >
+            <input type="text" class="form-control" id="informacion" required />
+            <div class="text-danger"></div>
+          </div>
+          <div class="mb-2">
+            <button
+              id="botton"
+              class="col-12 btn btn-primary d-flex justify-content-between"
+            >
+              <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
+            </button>
+          </div>
+          <a routerLink="/">volver</a>
+        </form>
+      </div>
     </div>
-    <div class="mb-1">
-      <form id="contacto">
-        <div class="mb-4">
-          <label for="nombre"><i class="bi bi-envelope-fill"></i> Nombre</label>
-          <input type="text" class="form-control" id="nombre" required />
-          <div class="text-danger"></div>
-        </div>
-        <div class="mb-4">
-          <label for="informacion"
-            ><i class="bi bi-envelope-fill"></i> Indormacion Personal</label
-          >
-          <input type="text" class="form-control" id="informacion" required />
-          <div class="text-danger"></div>
-        </div>
-        <div class="mb-2">
-          <button
-            id="botton"
-            class="col-12 btn btn-primary d-flex justify-content-between"
-          >
-            <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
-          </button>
-        </div>
-        <a routerLink="/">volver</a>
-      </form>
-    </div>
-  </div>
+  </form>
 </section>
