--- a/src/app/edicion/addproyecto/addproyecto.component.html
+++ b/src/app/edicion/addproyecto/addproyecto.component.html
@@ -4,7 +4,7 @@
       <h4><i class="bi bi-chat-left-quote"></i>Proyecto</h4>
     </div>
     <div class="mb-1">
-      <form id="contacto">
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
         <div class="mb-4">
           <label for="formFile" class="form-label">Imagen del proyecto</label>
           <input class="form-control" type="file" id="formFile" />
