--- a/src/app/edicion/addskill/addskill.component.html
+++ b/src/app/edicion/addskill/addskill.component.html
@@ -4,13 +4,14 @@
       <h4><i class="bi bi-chat-left-quote"></i>Habilidad</h4>
     </div>
     <div class="mb-1">
-      <form id="contacto">
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
         <div class="mb-4">
           <label for="nombre"
             ><i class="bi bi-envelope-fill"></i> Nombre de la habilidad</label
           >
           <input type="text" class="form-control" id="habilidad" required />
           <div class="text-danger"></div>
+          <br />
         </div>
         <div class="mb-4">
           <label for="customRange3" class="form-label">Example range</label>
