--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -11,7 +11,7 @@
       </button>
     </div>
 
-    <li *ngFor="let experiencia of experienciaList">
+    <li *ngFor="let experiencia of experienciaList" class="lista">
 
       <div class="card" aria-hidden="true">
         <div class="card-body">
