--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -7,7 +7,7 @@
       </button>
     </div>
 
-    <li *ngFor="let proyectos of proyectosList">
+    <li *ngFor="let proyectos of proyectosList" class="lista">
       <div class="card" aria-hidden="true">
         <div class="card-body">
           <h5>{{ proyectos.nombre }}</h5>
