--- a/src/app/edicion/addacercade/addacercade.component.html
+++ b/src/app/edicion/addacercade/addacercade.component.html
@@ -1,34 +1,44 @@
 <section class="d-flex justify-content-center align-items-center contenido">
-  <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
-    <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
-      <div class="mb-4 d-flex justify-content-start align-items-center">
-        <h4><i class="bi bi-chat-left-quote"></i>Datos</h4>
-      </div>
-      <div class="mb-1">
-        <form id="contacto">
-          <div class="mb-4">
-            <label for="nombre"><i class="bi bi-envelope-fill"></i> Nombre</label>
-            <input type="text" class="form-control" id="nombre" required />
-            <div class="text-danger"></div>
-          </div>
-          <div class="mb-4">
-            <label for="informacion"
-              ><i class="bi bi-envelope-fill"></i> Indormacion Personal</label
-            >
-            <input type="text" class="form-control" id="informacion" required />
-            <div class="text-danger"></div>
-          </div>
-          <div class="mb-2">
-            <button
-              id="botton"
-              class="col-12 btn btn-primary d-flex justify-content-between"
-            >
-              <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
-            </button>
-          </div>
-          <a routerLink="/">volver</a>
-        </form>
-      </div>
+  <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
+    <div class="mb-4 d-flex justify-content-start align-items-center">
+      <h4><i class="bi bi-chat-left-quote"></i>Acerca de</h4>
     </div>
-  </form>
+    <div class="mb-1">
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+        <div>
+          <label for="titulo"
+            ><i class="bi bi-envelope-fill"></i> Nombre</label>
+            <br>
+          <input type="nombre" formControlName="nombre" />
+        </div>
+        <div *ngIf="Nombre?.errors && Nombre?.touched">
+          <p *ngIf="Nombre?.hasError('required')" class="error">
+            El nombre de la persona es requerido.
+          </p>
+        </div>
+
+        <br />
+        <div class="mb-4">
+          <label for="porcentaje"
+            ><i class="bi bi-envelope-fill"></i> Informacion personal</label>
+            <br>
+          <input
+            type="informacion"
+            formControlName="informacion"
+          />
+        </div>
+        <div *ngIf="Informacion?.errors && Informacion?.touched">
+          <p *ngIf="Informacion?.hasError('required')" class="error">
+            La informacion personal es requerida.
+          </p>
+        </div>
+        <br />
+        <div>
+          <button type="submit">Iniciar Sesión</button>
+        </div>
+        <a routerLink="/">volver</a>
+      </form>
+    </div>
+  </div>
 </section>
+
