--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -8,10 +8,10 @@
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
-    <li *ngFor="let skills of skillsList" class="lista">
+    <li *ngFor="let habilidad of habilidades" class="lista">
       <div class="row mb-12">
         <div class="col-12 align-items-center">
-          <p class="h5">{{ skills.titulo }}</p>
+          <p class="h5">{{ habilidad.titulo }}</p>
           <div class="progress mb-5 rounded-5" style="height: 7px">
             <div
               class="progress-bar"
@@ -20,7 +20,9 @@
               aria-valuenow="100"
               aria-valuemin="0"
               aria-valuemax="100"
-            ></div>
+              [style.width.%]="habilidad.porcentaje"
+              style="min-width: 10%;"
+            >{{habilidad.porcentaje}}</div>
           </div>
         </div>
       </div>
